Fixed up the type checking for functions. Need more tests for existing functions, I think.